--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-index.html
+<!DOCTYPE html>
+<html lang="en" ng-app="community">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link type="text/css" rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+	<link type="text/css" rel="stylesheet" href="css/community.css">
+	<script type="text/javascript" src="lib/jquery/jquery-2.1.1.js"></script>
+	<script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="lib/angularjs/angular.js"></script>
+	<script type="text/javascript" src="lib/angularjs/angular-route.js"></script>
+	<script type="text/javascript" src="lib/angularjs/angular-resource.js"></script>
+	
+	<script src="js/community.js"></script>
+	<script src="js/directives.js"></script>
+  	<script src="js/controllers.js"></script>
+ 	<script src="js/services.js"></script>
+  	<script src="js/filters.js"></script>
+</head>
+<body>
+	<div ng-view></div>
+</body>
+</html>
