--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 	<script type="text/javascript" src="lib/angularjs/angular.js"></script>
 	<script type="text/javascript" src="lib/angularjs/angular-route.js"></script>
 	<script type="text/javascript" src="lib/angularjs/angular-resource.js"></script>
+	<script type="text/javascript" src="lib/bootstrap-wysiwyg/bootstrap-wysiwyg.js"></script>
+	<script type="text/javascript" src="lib/bootstrap-wysiwyg/jquery.hotkeys.js"></script>
 	
 	<script src="js/community.js"></script>
+	<script src="js/community1.js"></script>
   	<script src="js/controllers.js"></script>
  	<script src="js/services.js"></script>
 	<script src="js/directives.js"></script>
