--- a/lib/ueditor/dialogs/help/help.html
+++ b/lib/ueditor/dialogs/help/help.html
@@ -2,8 +2,8 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>帮助</title>
-    <meta content="text/html; charset=GBK" http-equiv="Content-Type"/>
+    <title>甯姪</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <script type="text/javascript" src="../internal.js"></script>
     <link rel="stylesheet" type="text/css" href="help.css">
 </head>
