--- a/lib/ueditor/dialogs/music/music.html
+++ b/lib/ueditor/dialogs/music/music.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=GBK">
-    <title>插入音乐</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>鎻掑叆闊充箰</title>
     <script type="text/javascript" src="../internal.js"></script>
     <link rel="stylesheet" type="text/css" href="music.css">
 </head>
