--- a/lib/ueditor/dialogs/spechars/spechars.html
+++ b/lib/ueditor/dialogs/spechars/spechars.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=GBK"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script type="text/javascript" src="../internal.js"></script>
     <style type="text/css">
         html,body{overflow:hidden;}
