--- a/lib/ueditor/dialogs/video/video.html
+++ b/lib/ueditor/dialogs/video/video.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=GBK"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script type="text/javascript" src="../internal.js"></script>
     <link rel="stylesheet" type="text/css" href="video.css" />
 </head>
